Stop using custom space between nav bar items in landscape view
If the space between icon and text is too big, it's difficult to identify the items correctly, espacially on smaller devices (600-700px).

--- a/src/app/shared/bars/nav-bar/nav-bar.component.scss
+++ b/src/app/shared/bars/nav-bar/nav-bar.component.scss
@@ -122,7 +122,7 @@
       padding: 16px 12px;
 
       .mat-icon {
-        margin-right: 16px;
+        margin-right: 12px;
       }
     }
 
